--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "ja" }}">
-
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index">
-    <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ 'assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 {% seo %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ 'assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% if page.math %}
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    {% endif %}
+    <style>
+        {% if page.iro %}
+      body {
+        background-color: #{{ page.iro }};
+        background-image: linear-gradient(-90deg, #{{ page.gra }}, #{{ page.iro }});
+      }
+      .main-content h1,
+      .main-content h2,
+      .main-content h3,
+      .main-content h4,
+      .main-content h5,
+      .main-content h6{
+        color: #{{ page.iro }};
+      }
+        {% endif %}
+        {% if page.background %}
+      body {
+        background-image: url('media/{{ page.background }}');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+        {% endif %}
+    </style>
 <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
@@ -21,54 +44,30 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
   </head>
+  <body{% if page.oto %} onload="showtext()"{% endif %}>
+   <div id="passage-text" class="passage">
+    <section class="main-content" id="bun"{% if page.oto %} style="display:none"{% endif %}>
 
-  <body>
+      {{ content }}
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        {{ content }}
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+       
+      <footer class="site-footer">
        
        {% if page.author %}
-       <div> {{ page.author }}</div>
+       <div>[{{ page.author }}](mailto:{{ page.author }})</div>
        {% endif %}
 
       <div>
-    	Modified on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y-%m-%d" }}</time>
+    	Modified on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date }}</time>
       </div>
 
        {% if page.ccbysa %}
        <div><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</div>
        {% endif %}
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+
       </footer>
-    </div>
+    </section>
+   </div>
 
     {% if site.google_analytics %}
       <script type="text/javascript">
@@ -76,9 +75,12 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
         ga('create', '{{ site.google_analytics }}', 'auto');
         ga('send', 'pageview');
       </script>
     {% endif %}
   </body>
 </html>
+
+
