--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,13 +9,13 @@ $large-breakpoint: 48em;
 // Headers
 //$header-heading-color: #fff !default;
 //$header-bg-color: #159957 !default;
-$header-bg-color: #DB5D57;
+$header-bg-color: #92bccd;
 //$header-bg-color-secondary: #155799 !default;
-$header-bg-color-secondary: #DDBB55;
+$header-bg-color-secondary: #ffe6f8;
 
 // Text
 //$section-headings-color: #159957 !default;
-$section-headings-color: #DB5D57;
+$section-headings-color: #92bccd;
 //$body-text-color: #606c71 !default;
 $body-text-color: #3E474B;
 //$body-link-color: #1e6bb8 !default;
