--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,26 +39,9 @@ $spacing-unit: 1.2em;
 @import "{{ site.theme }}";
 
 
-//use Migu fonts
-@font-face {
-    font-family: 'Migu 1C';
-    src: url('https://o-yamabiko.github.io/fonts/migu-1c-regular.woff2') format('woff2'),
-         url('https://o-yamabiko.github.io/fonts/migu-1c-regular.woff') format('woff'),
-         url('https://o-yamabiko.github.io/fonts/migu-1c-regular.ttf') format('truetype'),
-         url('https://o-yamabiko.github.io/fonts/migu-1c-regular.svg#migu-1c-regular') format('svg');
-}
-
-@font-face {
-    font-family: 'Migu 1C';
-    src: url('https://o-yamabiko.github.io/fonts/migu-1c-bold.woff2') format('woff2'),
-         url('https://o-yamabiko.github.io/fonts/migu-1c-bold.woff') format('woff'),
-         url('https://o-yamabiko.github.io/fonts/migu-1c-bold.ttf') format('truetype'),
-         url('https://o-yamabiko.github.io/fonts/migu-1c-bold.svg#migu-1c-bold') format('svg');
-    font-weight: bold;
-}
 
 * {
-  font-family: 'Migu 1C';
+  font-family: Verdana, sans-serif;
 }
 
 
