--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,11 +39,24 @@ $spacing-unit: 1.2em;
 @import "{{ site.theme }}";
 
 
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400&family=Varela+Round&display=swap'); 
-* {
-font-family: 'M PLUS Rounded 1c', Verdana, sans-serif;
-letter-spacing: 1px;
+//use Migu fonts
+@font-face {
+    font-family: 'Migu 1M';
+    src: url('fonts/migu-1m-regular.woff2') format('woff2'),
+         url('fonts/migu-1m-regular.woff') format('woff');
 }
+
+@font-face {
+    font-family: 'Migu 1M';
+    src: url('fonts/migu-1m-bold.woff2') format('woff2'),
+         url('fonts/migu-1m-bold.woff') format('woff');
+    font-weight: bold;
+}
+
+* {
+  font-family: 'Migu 1M', Verdana, sans-serif;
+}
+
 
 
 body {
