--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
 
        
       <footer class="site-footer">
-       <div><a href="{{ site_url }}">{{ site_name }}</a></div>
+       <div><a href="{{ site_url }}">{{ site.description }}</a></div>
        {% if page.author %}
        <div><a href="mailto:{{ page.author }}">{{ page.author }}</a></div>
        {% endif %}
